@@ -1,1 +1,2 @@
 DIST fsleyes-0.32.0.tar.gz 87700064 SHA256 5e728b265608df8cf1a18ddda8694446e44550b0072884a5bb2bf70cb6489862 SHA512 de501e0527c94faad77bffdc6e9262ae185e661bc1b2ca494d75e7f33d7532b7b786c0b776682a0fa08fc48708e3d090de5319b02d4f9b3c0abb75c7cf1e9d1a WHIRLPOOL 1446c04514dbaf07d86b61c231f56d12433d6f49b1dfafb971d444fca067a7bacd9d1593981b19fcb5f4d503ad736ff2f4a9588514a2851180af632108f3b301
+DIST fsleyes-0.32.3.tar.gz 87756679 SHA256 06df776bcca0e6457817132c86a3140edccc5c6f94ff8cfc2b9f54385ad4d394 SHA512 0027f923deac82d7d5f4916716dd46579c9a824d86415896fbb096bcc94cd3eead2f2d754b55d666764783abc9025d6d6f6313d1cee60bd1035348191475dd0f WHIRLPOOL f64a91ebc0e08094725faa311209f8ffb3e507b96808a17966aaf7664e30be7363a6133e05afcf0b958a6d9f3d0ad96b7a164a15bc65462a2875e4114e2dd37d
